WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84505
REGRESSION (
r114784
): svg/text/foreignObject-text-clipping-bug.xml failing on Mountain Lion Debug Tests
https://bugs.webkit.org/show_bug.cgi?id=84505
Summary
REGRESSION (r114784): svg/text/foreignObject-text-clipping-bug.xml failing on...
Jer Noble
Reported
2012-04-20 16:01:33 PDT
svg/text/foreignObject-text-clipping-bug.xml started failing on Mountain Lion Debug Tests in
r114784
<
http://trac.webkit.org/changeset/114784
>.
http://build-safari.apple.com/results/Mountain%20Lion%20Debug%20Tests/r114783_42680%20(732)/results.html
passed
http://build-safari.apple.com/results/Mountain%20Lion%20Debug%20Tests/r114784_42680%20(731)/results.html
failed
Attachments
Remove the false assumption that boxes only have boxes as siblings
(2.51 KB, patch)
2012-04-20 16:54 PDT
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-04-20 16:05:39 PDT
Added crashing test to test_expectations.txt Committed
r114795
: <
http://trac.webkit.org/changeset/114795
>
mitz
Comment 2
2012-04-20 16:21:35 PDT
I am working on this.
mitz
Comment 3
2012-04-20 16:54:30 PDT
Created
attachment 138200
[details]
Remove the false assumption that boxes only have boxes as siblings
mitz
Comment 4
2012-04-20 17:59:12 PDT
Fixed in
r114813
.
mitz
Comment 5
2012-04-24 19:24:43 PDT
<
rdar://problem/11295217
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug