REGRESSION (r114784): svg/text/foreignObject-text-clipping-bug.xml failing on Mountain Lion Debug Tests https://bugs.webkit.org/show_bug.cgi?id=84505

Reviewed by Anders Carlsson.

Source/WebCore:

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::blockBeforeWithinSelectionRoot): Changed to not assume that boxes only
have boxes as siblings.

LayoutTests:

* platform/mac/test_expectations.txt:



Canonical link: https://commits.webkit.org/102004@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114813 268f45cc-cd09-0410-ab3c-d52691b4dbfc